--- a/.fterm_config.json
+++ b/.fterm_config.json
@@ -3,7 +3,8 @@
         "name": "Dev",
         "mode": "debug",
         "flavor": "dev",
-        "target": "main.dart"
+        "target": "main.dart",
+        "dart_define_from_file": "test.json"
     },
     {
         "name": "Prod",
