--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v*' # Trigger for tags like v1.0.0
 
+permissions:
+  contents: write
+
 jobs:
   release:
     name: Build and Release
