--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,8 +2,8 @@ name: Continuous Deployment
 
 on:
   push:
-    tags:
-      - 'v*' 
+    # tags:
+    #   - 'v*' 
 
 permissions:
   contents: write
