--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,8 +2,9 @@ name: Continuous Deployment
 
 on:
   push:
-    # tags:
-    #   - 'v*' 
+    tags:
+      - 'v*' 
+      - 'test'
 
 permissions:
   contents: write
