--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -59,5 +59,5 @@ brews:
     repository:
       owner: siquitch
       name: homebrew-fterm
-      token: "{{ .Env.TAP_GITHUB_TOKEN }}"
+      token: "{{ .Env.GITHUB_TOKEN }}"
     license: "MIT"
